<resources>
    <string name="action_logout">Log out</string>
    <string name="app_name">Fresh Drinks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment log in </string>
    <string name="hello_blank_fragment_register">Hello register</string>
    <string name="title_activity_list">List of activity</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="prompt_password">password</string>
    <string name="prompt_username">username</string>
    <string name="prompt_email">email</string>
    <string name="title_activity_drinks">Add your drink</string>
    <string name="drink_name">drink name</string>
    <string name="recipe">recipe</string>
    <string name="upload_image">Upload image</string>
    <string name="upload_video">upload video</string>
    <string name="title_activity_details">Drink details</string>
    <string name="details">Your drinks</string>
    <string name="title_activity_register">Add your info</string>
    <string name="title_activity_add_drink">Add Drink</string>
    <string name="title_activity_main">Your drinks</string>
    <!--  <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-1913927795422634/5926481700</string>
    <string name="descriptionButtonText">Some text</string>
    <string name="extra_message">EXTRA_MESSAGE</string>
    <string name="chose_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add Photo!</string>
    <string name="error_data">Error data</string>
    <string name="action">Action</string>
    <string name="data_saved">Data saved</string>
    <string name="username_or_pass">The username or password do not match !</string>
    <string name="username">username</string>
    <string name="drinkname">drinkname</string>
    <string name="drinkimg">drinkimg</string>
    <string name="isdetox">isdetox</string>
    <string name="no_image">No image to display!</string>
    <string name="select_for_username">select * from tblDrink where username=?</string>
    <string name="action_detox">Sort detox</string>
    <string name="action_favorite">Sort favorite</string>
    <string name="action_share">Share</string>
    <string name="no_detox_drinks">Do not have detox drinks to display!!</string>
    <string name="action_load_all">Load all</string>
    <string name="is_detox">Is detox</string>
    <string name="EXTRA_ID">EXTRA_ID</string>
    <string name="EXTRA_MESSAGE">EXTRA_MESSAGE</string>
    <string name="Select_from_tblDrink">select * from tblDrink where idDrink=?</string>
    <string name="detox">detox</string>
    <string name="updatetblDrink">update tblDrink set drinkname=?,recipe=?,isdetox=? where idDrink=?</string>
    <string name="shareImageUsing">Share image using</string>
    <string name="imageType">image/jpeg</string>
    <string name="PREFERENCE">PREFERENCE</string>
    <string name="LoggedUser">LoggedUser</string>
    <string name="LoggedUsername">LoggedUsername</string>
    <string name="selectForUsername">select * from tblUser where username=? and password=?</string>
    <string name="WriteUsername">User should have username !!</string>
    <string name="TakenUsername">This username is taken. Please chose other!</string>
</resources>
