<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="udacity_project.myapplication.LogInActivity">
    <item
        android:id="@+id/action_main"
        android:orderInCategory="100"
        android:title="@string/action_load_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/action_favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_detox"
        android:orderInCategory="100"
        android:title="@string/action_detox"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>

