<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="udacity_project.myapplication.AddDrinkActivity"
    tools:showIn="@layout/activity_add_drink"
    android:background="@drawable/fruit_1">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="400px"
            android:layout_height="300px"
            android:id="@+id/imageView"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/drinksName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drink_name"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/recipe"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:hint="@string/recipe"
            android:imeOptions="actionUnspecified"
            android:inputType="textMultiLine"
            android:maxLines="1"
            android:layout_centerHorizontal="true" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isdetox"
            android:layout_gravity="center"
            android:text="Is detox" />

        <Button
            style="?android:textAppearanceSmall"
            android:id="@+id/uploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center" />

        <Button
            style="?android:textAppearanceSmall"
            android:id="@+id/btnSaveDrinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save data"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:onClick="SaveDrinksButtonClick" />


    </LinearLayout>
</RelativeLayout>
